<resources>
    <string name="app_name">New Speedy Reader</string>

    <string name="luserName">BT Halpatch</string>
    <string name="action_settings">Settings</string>
    <string name="welcomePhrase">Welcome Back</string>
    <string name="levelSelectButton">Level Select</string>
    <string name="changeUserButton">Change User</string>
    <string name="title_activity_levels">levels</string>
    <string name="levelHeader">Levels</string>
    <string name="title_activity_reading_assistant">readingAssistant</string>
    <string name="userName">Benjamin</string>
    <string name="currentLevel">Level ...</string>
    <string name="playbuttondescription">Play Button</string>
    <string name="levelTitle1">1</string>
    <string name="levelTitle2">2</string>
    <string name="levelTitle3">3</string>
    <string name="levelTitle4">4</string>
    <string name="levelTitle5">5</string>
    <string name="levelTitle6">6</string>
    <string name="levelTitle7">7</string>
    <string name="levelTitle8">8</string>
    <string name="levelTitle9">9</string>
    <string name="levelTitle10">10</string>
    <string name="levelTitle11">11</string>
    <string name="levelTitle12">12</string>
    <string name="levelTitle13">13</string>
    <string name="levelTitle14">14</string>
    <string name="levelTitle15">15</string>
    <string name="levelTitle16">16</string>
    <string name="levelTitle17">17</string>
    <string name="levelTitle18">18</string>
    <string name="levelTitle19">19</string>
    <string name="levelTitle20">20</string>
    <string name="title_activity_user_list">userList</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_new_user">newUser</string>
    <string name="title_activity_book_list">bookList</string>
    <string name="title_activity_new_book">newBook</string>
    <string name="newUserText">Add User</string>
    <string name="addBookString">Add Book</string>
    <string name="addUserButton">Add User</string>
</resources>
